[gd_scene load_steps=9 format=2]

[ext_resource path="res://World.tres" type="TileSet" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://Assets/default.tres" type="DynamicFont" id=4]
[ext_resource path="res://Slot.tscn" type="PackedScene" id=5]
[ext_resource path="res://Background.tres" type="TileSet" id=6]
[ext_resource path="res://Scenes/Back.gd" type="Script" id=7]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="CubeMesh" id=24]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
borderMin = Vector2( -150, 0 )
borderMax = Vector2( 370, 100 )

[node name="World" type="TileMap" parent="."]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
scale = Vector2( 4, 4 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_layer = 3
collision_mask = 3
format = 1

[node name="WorldLighter" type="TileMap" parent="."]
visible = false
position = Vector2( 5, -5 )
scale = Vector2( 4, 4 )
z_index = -1
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( -1, 6, 0, -65536, 6, 0, 65534, 6, 0, 1, 6, 0, 131069, 6, 0, 65537, 7, 0, 65538, 6, 0, 196605, 6, 0, 131074, 6, 0, 327676, 5, 0, 327677, 6, 0, 327678, 6, 0, 327679, 6, 0, 262144, 6, 0, 262145, 6, 0, 262146, 6, 0, 262147, 5, 0, 262160, 5, 0, 262161, 5, 0, 262162, 5, 0, 262163, 5, 0, 393208, 5, 0, 393209, 5, 0, 393210, 5, 0, 393211, 5, 0, 393212, 1, 0, 393213, 1, 0, 393214, 1, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 5, 0, 327685, 5, 0, 327686, 5, 0, 327687, 23, 0, 327688, 23, 0, 327689, 5, 0, 327690, 5, 0, 327691, 31, 0, 327692, 31, 0, 327693, 31, 0, 327694, 31, 0, 327695, 5, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 458740, 5, 0, 458741, 5, 0, 458742, 5, 0, 458743, 5, 0, 458744, 1, 0, 458745, 1, 0, 458746, 1, 0, 458747, 1, 0, 458748, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 31, 0, 393229, 31, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 524276, 1, 0, 524277, 1, 0, 524278, 1, 0, 524279, 1, 0, 524280, 1, 0, 524281, 1, 0, 524282, 1, 0, 524283, 1, 0, 524284, 1, 0, 524285, 1, 0, 524286, 1, 0, 524287, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 589812, 1, 0, 589813, 1, 0, 589814, 1, 0, 589815, 1, 0, 589816, 1, 0, 589817, 1, 0, 589818, 1, 0, 589819, 1, 0, 589820, 9, 0, 589821, 9, 0, 589822, 9, 0, 589823, 9, 0, 524288, 9, 0, 524289, 9, 0, 524290, 9, 0, 524291, 9, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 9, 0, 524305, 9, 0, 524306, 9, 0, 524307, 9, 0, 655348, 1, 0, 655349, 1, 0, 655350, 1, 0, 655351, 1, 0, 655352, 9, 0, 655353, 9, 0, 655354, 9, 0, 655355, 9, 0, 655356, 9, 0, 655357, 9, 0, 655358, 9, 0, 655359, 9, 0, 589824, 9, 0, 589825, 9, 0, 589826, 9, 0, 589827, 9, 0, 589828, 9, 0, 589829, 9, 0, 589830, 9, 0, 589831, 9, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 9, 0, 589839, 9, 0, 589840, 9, 0, 589841, 9, 0, 589842, 9, 0, 589843, 9, 0, 720884, 9, 0, 720885, 9, 0, 720886, 9, 0, 720887, 9, 0, 720888, 9, 0, 720889, 9, 0, 720890, 9, 0, 720891, 9, 0, 720892, 9, 0, 720893, 9, 0, 720894, 9, 0, 720895, 9, 0, 655360, 9, 0, 655361, 9, 0, 655362, 9, 0, 655363, 9, 0, 655364, 9, 0, 655365, 9, 0, 655366, 9, 0, 655367, 9, 0, 655368, 9, 0, 655369, 9, 0, 655370, 9, 0, 655371, 9, 0, 655372, 9, 0, 655373, 9, 0, 655374, 9, 0, 655375, 9, 0, 655376, 9, 0, 655377, 9, 0, 655378, 9, 0, 655379, 9, 0, 786420, 9, 0, 786421, 9, 0, 786422, 9, 0, 786423, 9, 0, 786424, 9, 0, 786425, 9, 0, 786426, 9, 0, 786427, 9, 0, 786428, 9, 0, 786429, 9, 0, 786430, 9, 0, 786431, 9, 0, 720896, 9, 0, 720897, 9, 0, 720898, 9, 0, 720899, 9, 0, 720900, 9, 0, 720901, 9, 0, 720902, 9, 0, 720903, 9, 0, 720904, 9, 0, 720905, 9, 0, 720906, 9, 0, 720907, 9, 0, 720908, 9, 0, 720909, 9, 0, 720910, 9, 0, 720911, 9, 0, 720912, 9, 0, 720913, 9, 0, 720914, 9, 0, 720915, 9, 0, 851956, 9, 0, 851957, 9, 0, 851958, 9, 0, 851959, 9, 0, 851960, 9, 0, 851961, 9, 0, 851962, 9, 0, 851963, 9, 0, 851964, 9, 0, 851965, 9, 0, 851966, 9, 0, 851967, 9, 0, 786432, 9, 0, 786433, 9, 0, 786434, 9, 0, 786435, 9, 0, 786436, 9, 0, 786437, 9, 0, 786438, 9, 0, 786439, 9, 0, 786440, 9, 0, 786441, 9, 0, 786442, 9, 0, 786443, 9, 0, 786444, 9, 0, 786445, 9, 0, 786446, 9, 0, 786447, 9, 0, 786448, 9, 0, 786449, 9, 0, 786450, 9, 0, 786451, 9, 0 )

[node name="WorldDarker" type="TileMap" parent="."]
visible = false
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
position = Vector2( -5, 5 )
scale = Vector2( 4, 4 )
z_index = -1
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( -1, 6, 0, -65536, 6, 0, 65534, 6, 0, 1, 6, 0, 131069, 6, 0, 65537, 7, 0, 65538, 6, 0, 196605, 6, 0, 131074, 6, 0, 327676, 5, 0, 327677, 6, 0, 327678, 6, 0, 327679, 6, 0, 262144, 6, 0, 262145, 6, 0, 262146, 6, 0, 262147, 5, 0, 262160, 5, 0, 262161, 5, 0, 262162, 5, 0, 262163, 5, 0, 393208, 5, 0, 393209, 5, 0, 393210, 5, 0, 393211, 5, 0, 393212, 1, 0, 393213, 1, 0, 393214, 1, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 5, 0, 327685, 5, 0, 327686, 5, 0, 327687, 23, 0, 327688, 23, 0, 327689, 5, 0, 327690, 5, 0, 327691, 31, 0, 327692, 31, 0, 327693, 31, 0, 327694, 31, 0, 327695, 5, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 458740, 5, 0, 458741, 5, 0, 458742, 5, 0, 458743, 5, 0, 458744, 1, 0, 458745, 1, 0, 458746, 1, 0, 458747, 1, 0, 458748, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 31, 0, 393229, 31, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 524276, 1, 0, 524277, 1, 0, 524278, 1, 0, 524279, 1, 0, 524280, 1, 0, 524281, 1, 0, 524282, 1, 0, 524283, 1, 0, 524284, 1, 0, 524285, 1, 0, 524286, 1, 0, 524287, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 589812, 1, 0, 589813, 1, 0, 589814, 1, 0, 589815, 1, 0, 589816, 1, 0, 589817, 1, 0, 589818, 1, 0, 589819, 1, 0, 589820, 9, 0, 589821, 9, 0, 589822, 9, 0, 589823, 9, 0, 524288, 9, 0, 524289, 9, 0, 524290, 9, 0, 524291, 9, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 9, 0, 524305, 9, 0, 524306, 9, 0, 524307, 9, 0, 655348, 1, 0, 655349, 1, 0, 655350, 1, 0, 655351, 1, 0, 655352, 9, 0, 655353, 9, 0, 655354, 9, 0, 655355, 9, 0, 655356, 9, 0, 655357, 9, 0, 655358, 9, 0, 655359, 9, 0, 589824, 9, 0, 589825, 9, 0, 589826, 9, 0, 589827, 9, 0, 589828, 9, 0, 589829, 9, 0, 589830, 9, 0, 589831, 9, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 9, 0, 589839, 9, 0, 589840, 9, 0, 589841, 9, 0, 589842, 9, 0, 589843, 9, 0, 720884, 9, 0, 720885, 9, 0, 720886, 9, 0, 720887, 9, 0, 720888, 9, 0, 720889, 9, 0, 720890, 9, 0, 720891, 9, 0, 720892, 9, 0, 720893, 9, 0, 720894, 9, 0, 720895, 9, 0, 655360, 9, 0, 655361, 9, 0, 655362, 9, 0, 655363, 9, 0, 655364, 9, 0, 655365, 9, 0, 655366, 9, 0, 655367, 9, 0, 655368, 9, 0, 655369, 9, 0, 655370, 9, 0, 655371, 9, 0, 655372, 9, 0, 655373, 9, 0, 655374, 9, 0, 655375, 9, 0, 655376, 9, 0, 655377, 9, 0, 655378, 9, 0, 655379, 9, 0, 786420, 9, 0, 786421, 9, 0, 786422, 9, 0, 786423, 9, 0, 786424, 9, 0, 786425, 9, 0, 786426, 9, 0, 786427, 9, 0, 786428, 9, 0, 786429, 9, 0, 786430, 9, 0, 786431, 9, 0, 720896, 9, 0, 720897, 9, 0, 720898, 9, 0, 720899, 9, 0, 720900, 9, 0, 720901, 9, 0, 720902, 9, 0, 720903, 9, 0, 720904, 9, 0, 720905, 9, 0, 720906, 9, 0, 720907, 9, 0, 720908, 9, 0, 720909, 9, 0, 720910, 9, 0, 720911, 9, 0, 720912, 9, 0, 720913, 9, 0, 720914, 9, 0, 720915, 9, 0, 851956, 9, 0, 851957, 9, 0, 851958, 9, 0, 851959, 9, 0, 851960, 9, 0, 851961, 9, 0, 851962, 9, 0, 851963, 9, 0, 851964, 9, 0, 851965, 9, 0, 851966, 9, 0, 851967, 9, 0, 786432, 9, 0, 786433, 9, 0, 786434, 9, 0, 786435, 9, 0, 786436, 9, 0, 786437, 9, 0, 786438, 9, 0, 786439, 9, 0, 786440, 9, 0, 786441, 9, 0, 786442, 9, 0, 786443, 9, 0, 786444, 9, 0, 786445, 9, 0, 786446, 9, 0, 786447, 9, 0, 786448, 9, 0, 786449, 9, 0, 786450, 9, 0, 786451, 9, 0 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color( 0.709804, 0.980392, 1, 1 )
scale = Vector2( 1024, 600 )
z_index = -5
mesh = SubResource( 2 )

[node name="MouseSelect" type="MeshInstance2D" parent="."]
modulate = Color( 1, 1, 1, 0.247059 )
position = Vector2( -32, -32 )
scale = Vector2( 30, 30 )
mesh = SubResource( 24 )

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 3, 3 )
current = true
zoom = Vector2( 1.25, 1.25 )
smoothing_speed = 7.5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Inventory" type="Node2D" parent="CanvasLayer"]

[node name="Hotbar" type="Node2D" parent="CanvasLayer/Inventory"]
scale = Vector2( 0.999999, 0.999999 )
z_index = 5

[node name="Slot1" parent="CanvasLayer/Inventory/Hotbar" instance=ExtResource( 5 )]
position = Vector2( 384, 558 )
scale = Vector2( 4, 4 )
isHotbar = true
item = -1
amount = 0

[node name="Slot2" parent="CanvasLayer/Inventory/Hotbar" instance=ExtResource( 5 )]
position = Vector2( 448, 558 )
scale = Vector2( 4, 4 )
isHotbar = true
item = -1
amount = 0

[node name="Slot3" parent="CanvasLayer/Inventory/Hotbar" instance=ExtResource( 5 )]
position = Vector2( 512, 558 )
scale = Vector2( 4, 4 )
isHotbar = true
item = -1
amount = 0

[node name="Slot4" parent="CanvasLayer/Inventory/Hotbar" instance=ExtResource( 5 )]
position = Vector2( 576, 558 )
scale = Vector2( 4, 4 )
isHotbar = true
item = -1
amount = 0

[node name="Slot5" parent="CanvasLayer/Inventory/Hotbar" instance=ExtResource( 5 )]
position = Vector2( 640, 558 )
scale = Vector2( 4, 4 )
isHotbar = true
item = -1
amount = 0

[node name="Back" type="Button" parent="CanvasLayer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 137.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 4 )
text = "Menu"
script = ExtResource( 7 )

[connection signal="pressed" from="CanvasLayer/Back" to="." method="_on_Back_pressed"]
